--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<head>
+  <title><%= title %></title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+<body>
+<header>
+  <h1>File Upload Application</h1>
+  <p>Author by Lu Zheng</p>
+</header>
+
+<section id="buttonSec">
+  <input type="file" id="uploadFile">
+  <button id="upload" onclick="uploadFunction()">upload</button>
+</section>
+
+<section id="fileListSec">
+  <ul id="fileLists">
+
+  </ul>
+</section>
+
+
+<script type="text/javascript" src="/javascripts/external/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="/javascripts/upload.js"></script>
+</body>
 </html>
