modify file names

--- a/views/mainPage.ejs
+++ b/views/mainPage.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>File Upload Application</title>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel='stylesheet' href='/stylesheets/mainPageStyle.css' />
 </head>
 <body>
 <header>
@@ -29,6 +29,6 @@
 
 
 <script type="text/javascript" src="/javascripts/external/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="/javascripts/upload.js"></script>
+<script type="text/javascript" src="/javascripts/mainPage.js"></script>
 </body>
 </html>
