--- a/public/stylesheets/mainPageStyle.css
+++ b/public/stylesheets/mainPageStyle.css
@@ -1,22 +1,35 @@
 @import url(baseStyleSheet.css);
 
-body {
-  padding: 50px;
+body,html {
+  padding: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #eaeced;
+  height: 100%;
+  border-top: 2px solid #fc0;
 }
 /*heading -- start*/
+header{
+  position: relative;
+  width: 100%;
+  height: 150px;
+  background-color: #2b2b2b;
+}
 header h1 {
-  font-size: 24px;
+  color: #eaeced;
+  font-size: 40px;
+  position: absolute;
+  bottom: 59px;
+  left: 150px;
 }
 header p{
+  color: #bfbfbf;
+  position: absolute;
+  bottom: 27px;
+  left: 153px;
   font-size: 18px;
 }
 
 /*heading -- end*/
-
-a {
-  color: #222;
-}
 
 /*button section -- start*/
 #buttonSec {
@@ -24,6 +37,13 @@ a {
   margin-top: 30px;
   width: 30%;
   height:100%;
+  margin-left: 150px;
+}
+#buttonSec input {
+  font-size: 14px;
+  line-height: 14px;
+  display: block;
+  margin-bottom: 15px;
 }
 
 /*button section -- end*/
@@ -33,10 +53,12 @@ a {
   float: right;
   width: 50%;
   height:100%;
+  margin-top: 30px;
 }
 
 #fileListSec li {
   margin-top: 5px;
+  font-size: 16px;
 }
 
 #fileListSec a {
